
# Version 0.4.5
- [#435] Valentina doesn't change the cursor.
- [#473] Tape 'Preferences' cause loss of focus.
- [#485] Error when drawing a curved path.
- [#491] Valentina doesn't update fractional separator.
- [#492] Valentina crashes when add an increment.
- [#493] Error in seam allowance drawing.
- [#468] Error - Tape 'Save As' should set 'Read Only' to false.

# Version 0.4.4 April 12, 2016
- Updated measurement templates with all measurements. Added new template Aldrich/Women measurements.
- Updated description measurements N06 and N07. Add new measurements A23 and J10.
- Fixed GUI issue. After full parse some widgets was incorrectly reseted.
- [#464] Crash. Issue with modeling node objects.
- [#463] Wrong export to DXF format.
- Fixed issue with deleting detail nodes.
- [#458] Issue with segment of curve.
- Fixed disappearing curve if start and finish points of a segment are equal.
- Fixed bug case where an open equidistant point is too far from a main path.
- [#462] Error while creating Detail/Seam Allowance using points made with True Dart tool.

# Version 0.4.3 March 6, 2016
- [#456] Crash: broken formula + clicking on the f(x) symbol.
- [#454] Crash: using CRTL+Z while using line tool
- Fixed broken saving pattern description.
- Fixed UI bug. Release a dialog size for deploying a formula field.
- Fixed broken formula when for system locale thousand separator is a space.
- Using QGraphicsScene instead of VMainGraphicsScene caused a crash.
- Fixed bug disabling tool True darts.
- Fixed wrong calculation tool True darts.
- [#405] Fixed crash after deleting first pattern piece in the list.
- [#421] Fixed warning: unable to set geometry.

# Version 0.4.2 February 17, 2016
- Measurement Diagram is not shown on Mac OS X.
- In dialog 'tool Spline Path' fixed broken selecting new point into the list of points.
- Regesign dialogs tool 'Spline' and 'Spline Path' for avoiding text squeeze.
- Fixed getting correct reversed segment for single in the list curve.